Home page fixed message so text aligned properly again. FINAl.

--- a/Phase2/website.css
+++ b/Phase2/website.css
@@ -466,6 +466,7 @@ h3, address{
     text-align: center;
     font-family:sans-serif;
     color: darkblue;
+    justify-content: center;
 }
 
 div#headStartPre.imggroup.short, 
